--- a/card/card.css
+++ b/card/card.css
@@ -1,114 +1,117 @@
 html {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 *,
 *:beore,
 *:after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 .card {
-  margin: 3vh auto auto auto;
-  width: 345px;
-  border: solid 1px lightgray;
-  box-shadow: 0.4px 0.4px #888888;
-  border-radius: 5px;
+	margin: 3vh auto auto auto;
+	width: 345px;
+	border: solid 1px lightgray;
+	box-shadow: 0.4px 0.4px #888888;
+	border-radius: 5px;
 }
 
-.card-head, .card-footer {
-  padding: 16px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap:wrap;
-  justify-content: flex-start;
-  align-items: center;
+.card-head,
+.card-footer {
+	padding: 16px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-items: center;
 }
 
 .avator {
-  width: 50px;
-  height: 50px;
-  border: solid 1px rgb(224, 218, 218);
-  border-radius: 50%;
-  box-shadow: rgba(0,0,0,0.3) 2px 3px 2px; 
-  margin-right:10px;
+	width: 50px;
+	height: 50px;
+	border: solid 1px rgb(224, 218, 218);
+	border-radius: 50%;
+	box-shadow: rgba(0, 0, 0, 0.3) 2px 3px 2px;
+	margin-right: 10px;
 }
 
 .card-body {
-  width: inherit;
-  font-size: 0.875rem;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-  font-weight: 400;
-  line-height: 1.43;
-  letter-spacing: 0.01071em;
-  
+	width: inherit;
+	font-size: 0.875rem;
+	font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+	font-weight: 400;
+	line-height: 1.43;
+	letter-spacing: 0.01071em;
 }
 
 .card-body img {
-  width: inherit;
-
+	width: inherit;
 }
 
-.card-body article{
-  padding: 10px;
-  color:rgba(0, 0, 0, 0.54);
-
+.card-body article {
+	padding: 10px;
+	color: rgba(0, 0, 0, 0.54);
 }
-button{
-  fill: currentColor;
-  color: rgba(0, 0, 0, 0.54);
-  overflow: visible;
-  font-size: 1.3rem;
-  text-align: center;
-  height: 48px;
-  width: 48px;
-  outline:none;
-  border-radius: 50%;
-  border:none;
+button {
+	fill: currentColor;
+	color: rgba(0, 0, 0, 0.54);
+	overflow: visible;
+	font-size: 1.3rem;
+	text-align: center;
+	height: 48px;
+	width: 48px;
+	outline: none;
+	border-radius: 50%;
+	border: none;
 }
-
-
 
 /* button:hover{
   background-color:rgba(243, 240, 240, 0.918);
 } */
 
-
-.date{
-  color:rgba(0, 0, 0, 0.54);
+.date {
+	color: rgba(0, 0, 0, 0.54);
 }
 
-.card-footer .buttons{
-  flex:auto;
+.card-footer .buttons {
+	flex: auto;
 }
 
-.right-button{
-  margin-left: auto; 
+.right-button {
+	margin-left: auto;
 }
 
-.hide{
-  display: none;
+.hide {
+	display: none;
 }
-
-
 
 .ripple {
-  background-color:none; 
-  background-position: center;
-  background-size: 0%;
-  background-repeat: no-repeat;
-  transition:background-size 0s;
-
+	background-color: none;
+	background-position: center;
+	background-size: 0%;
+	background-repeat: no-repeat;
+	transition: background-size 0s;
 }
 
-.ripple:hover{
-  background-color:rgba(243, 240, 240, 0.918); 
-  background-image: radial-gradient(circle,rgba(0, 0, 0, 0.199) 10%, transparent 1%,transparent);
-  background-size: 0%;
-  transition:background-size 0.3s;
-
+.ripple:hover {
+	background-color: rgba(243, 240, 240, 0.918);
+	background-image: radial-gradient(
+		circle,
+		rgba(0, 0, 0, 0.199) 10%,
+		transparent 1%,
+		transparent
+	);
+	background-size: 0%;
+	transition: background-size 0.3s;
 }
 
 /* transition的对象是background-size属性,扩大 */
-.ripple:active{
-  background-size: 1000%;
+.ripple:active {
+	background-size: 1000%;
+}
+
+.experiment {
+	background-color: aqua;
+	height: 40px;
+	width: 40px;
+	background-image: radial-gradient(circle, red 1%, green, blue);
 }
